fix symbols on mobile

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -178,7 +178,7 @@ button::after {
 
 span.ext-link {
     margin-left: 4px;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 
